--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Style the projects section */
+/* Style the models section */
 .models {
     margin: 1rem 0;
     flex-direction: column;
